[workspace]
resolver = "2"
members = [
  "src/opaque",
  "src/analytics",
  "src/api",
  "src/base64",
  "src/bundler",
  "src/codegen",
  "src/collections",
  "src/css",
  "src/errno",
  "src/glob",
  "src/http",
  "src/install",
  "src/install/windows-shim",
  "src/parsers",
  "src/io",
  "src/js",
  "src/libarchive",
  "src/md",
  "src/meta",
  "src/node-fallbacks",
  "src/paths",
  "src/resolver",
  "src/safety",
  "src/semver",
  "src/sourcemap",
  "src/sql",
  "src/sys",
  "src/threading",
  "src/unicode",
  "src/valkey",
  "src/watcher",
  "src/cares_sys",
  "src/clap",
  "src/clap_macros",
  "src/crash_handler",
  "src/csrf",
  "src/css_jsc",
  "src/dns",
  "src/dotenv",
  "src/event_loop",
  "src/exe_format",
  "src/highway",
  "src/http_jsc",
  "src/http_types",
  "src/ini",
  "src/install_jsc",
  "src/install_types",
  "src/js_parser",
  "src/js_parser_jsc",
  "src/js_printer",
  "src/libarchive_sys",
  "src/libdeflate_sys",
  "src/libuv_sys",
  "src/ast",
  "src/ast_jsc",
  "src/lolhtml_sys",
  "src/picohttp",
  "src/s3_signing",
  "src/sql_jsc",
  "src/zlib",
  "src/patch",
  "src/platform",
  "src/sha_hmac",
  "src/sys_jsc",
  "src/url_jsc",
  "src/zlib_sys",
  "src/dispatch",
  "src/brotli",
  "src/bundler_jsc",
  "src/perf",
  "src/resolve_builtins",
  "src/sourcemap_jsc",
  "src/url",
  "src/windows_sys",
  "src/jsc",
  "src/jsc_macros",
  "src/ptr",
  "src/boringssl",
  "src/brotli_sys",
  "src/bun_alloc",
  "src/mimalloc_sys",
  "src/picohttp_sys",
  "src/semver_jsc",
  "src/standalone_graph",
  "src/uws",
  "src/wyhash",
  "src/hash",
  "src/boringssl_sys",
  "src/bun_core",
  "src/bun_core_macros",
  "src/bun_output_tags",
  "src/patch_jsc",
  "src/router",
  "src/shell_parser",
  "src/tcc_sys",
  "src/uws_sys",
  "src/zstd",
  "src/options_types",
  "src/output",
  "src/runtime",
  "src/simdutf_sys",
  "src/which",
  "src/transpiler",
  "src/spawn",
  "src/spawn_sys",
  "src/bunfig",
  "src/bun_bin",
]
# `vendor/lolhtml/c-api` is consumed as a path dependency of
# `bun_lolhtml_sys` so its `#[no_mangle]` C API ends up inside
# `libbun_rust.a` (one Rust staticlib → one copy of std on the link line).
# It is deliberately NOT a workspace member: keeping it excluded means its
# `[profile]` section is ignored and its heavy dev-dependencies (criterion,
# html5ever) never enter `Cargo.lock`. The source is fetched into `vendor/`
# by the build system (`scripts/build/deps/lolhtml.ts`) before cargo runs.
exclude = ["vendor"]

[workspace.package]
version = "0.0.0"
edition = "2024"

# ─── Release optimization ───────────────────────────────────────────────────
# Zig's release build is one compilation unit with whole-program optimization.
# Cargo's defaults (lto=false, codegen-units=16) leave us at ~105 crates × 16
# CGUs ≈ 1680 separately-optimized units with NO cross-crate inlining beyond
# `#[inline]`-annotated leaf fns. `lto = "fat"` + `codegen-units = 1` collapses
# the whole Rust crate graph into one LLVM module, matching Zig's shape.
#
# `panic = "abort"` — the `std::panic` hook in `bun_crash_handler` aborts,
# so `catch_unwind` is unreachable for Rust panics regardless, and no landing
# pads means smaller `.pdata`/`.xdata`. Re-enabled to root-cause a latent
# Windows-only `Strong<Impl>* corrupted (0x1)` in the fs/promises writeFile
# async-iterable path (#53265+) that this codegen exposes: the corruption is
# not an over-deref (the `raw_ref_count` underflow assert does not fire). The
# Windows release link is temporarily `/OPT:NOICF` (flags.ts:778) so the PDB
# symbolicates to the real owning struct instead of an ICF-folded body; once
# root-caused, restore `/OPT:SAFEICF` there.
#
# Cross-language LTO (`-C linker-plugin-lto`, so Rust bitcode joins the C++
# `-flto=full` link) is wired in `scripts/build/rust.ts` behind `cfg.lto`; it
# requires the *linker's* LLVM to be ≥ rustc's bundled LLVM, so the build
# points `-fuse-ld` at rustc's `rust-lld` rather than clang's when enabled.
[profile.release]
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
strip = "none"
panic = "abort"

[profile.dev]
panic = "abort"

# Fast-iteration release build for local benching when fat LTO's link time
# (minutes) is in the way. `bun run build:release --cargo-profile=release-dev`.
[profile.release-dev]
inherits = "release"
lto = "thin"
codegen-units = 16

# Release with debuginfo retained for `perf record` / flamegraphs. Same opt
# level as release; binary is large but profilable.
[profile.release-profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"

# `bun_shim_impl.exe` — the Windows .bin/ launcher PE that gets
# `include_bytes!`'d into bun.exe and copied next to every package binary by
# `bun install`. Zig built it freestanding ReleaseFast (no libc,
# single-threaded, ~13 KiB). The Rust port matches that with
# `#![no_std]`/`#![no_main]` + a custom `/ENTRY:` (no CRT), and the build
# script supplies `-Zbuild-std=core,compiler_builtins` with
# `panic_immediate_abort` so panic-with-args compiles to a bare trap (no
# `core::fmt::Arguments` materialised). `panic = "abort"` + `lto` +
# `codegen-units = 1` let LLVM see the whole program; `opt-level = "z"`
# favours size; `strip = "symbols"` discards the .pdb-equivalent. Always
# release regardless of bun's own profile: a debug bun should still write
# release shims.
[profile.shim]
inherits = "release"
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

[workspace.lints.clippy]
# Prefer `.cast::<T>()` / `.cast_const()` / `.cast_mut()` / `ptr::from_ref` /
# `ptr::from_mut` over `as *const T` / `as *mut T`. The method forms cannot
# accidentally change mutability or perform a ref→raw coercion in one step,
# and they preserve provenance under Strict Provenance.
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
borrow_as_ptr = "warn"

[workspace.dependencies]
rust-argon2 = "3.0"
bcrypt = "0.19"
getrandom = "0.4"
strum = { version = "0.26", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
# `allocator-api2` feature gives `hashbrown::HashMap<K, V, S, A>` an externally-
# implementable `A` bound. We can't use hashbrown's own `nightly` feature (which
# would bind `A` to `core::alloc::Allocator` directly) because it also enables
# `min_specialization` on `T: Copy`, which our pinned nightly rejects with
# "cannot specialize on trait `Copy`". And we can't enable `allocator-api2`'s
# `nightly` re-export either — that makes hashbrown name `core::alloc::Allocator`
# without `#![feature(allocator_api)]`. So: use the polyfill trait, and bridge
# `bun_alloc::{AstAlloc, DefaultAlloc}` to it (see `bun_alloc/hashbrown_bridge.rs`).
hashbrown = { version = "0.15", default-features = false, features = ["inline-more", "allocator-api2"] }
allocator-api2 = { version = "0.2", default-features = false, features = ["alloc"] }
bstr = { version = "1", default-features = false, features = ["alloc"] }
scopeguard = "1"
const_format = "0.2"
enum-map = "2"
enumset = "1"
libc = "0.2"
memchr = "2"
rustix = { version = "0.38", default-features = false, features = ["std", "fs", "event", "process", "net"] }
bitflags = "2"
thiserror = "2"
crossbeam = "0.8"
smallvec = "1"
bumpalo = { version = "3", features = ["collections", "boxed"] }
typed-arena = "2"
itoa = "1"
bun_opaque = { path = "src/opaque" }
bun_analytics = { path = "src/analytics" }
bun_api = { path = "src/api" }
bun_base64 = { path = "src/base64" }
bun_bundler = { path = "src/bundler" }
bun_codegen = { path = "src/codegen" }
bun_collections = { path = "src/collections" }
bun_css = { path = "src/css" }
bun_errno = { path = "src/errno" }
bun_glob = { path = "src/glob" }
bun_http = { path = "src/http" }
bun_install = { path = "src/install" }
bun_parsers = { path = "src/parsers" }
bun_io = { path = "src/io" }
bun_js = { path = "src/js" }
bun_libarchive = { path = "src/libarchive" }
bun_md = { path = "src/md" }
bun_meta = { path = "src/meta" }
bun_node-fallbacks = { path = "src/node-fallbacks" }
bun_paths = { path = "src/paths" }
bun_resolver = { path = "src/resolver" }
bun_safety = { path = "src/safety" }
bun_semver = { path = "src/semver" }
bun_sourcemap = { path = "src/sourcemap" }
bun_sql = { path = "src/sql" }
bun_sys = { path = "src/sys" }
bun_threading = { path = "src/threading" }
bun_unicode = { path = "src/unicode" }
bun_valkey = { path = "src/valkey" }
bun_watcher = { path = "src/watcher" }
bun_cares_sys = { path = "src/cares_sys" }
bun_clap = { path = "src/clap" }
bun_clap_macros = { path = "src/clap_macros" }
bun_crash_handler = { path = "src/crash_handler" }
bun_csrf = { path = "src/csrf" }
bun_css_jsc = { path = "src/css_jsc" }
bun_dns = { path = "src/dns" }
bun_dotenv = { path = "src/dotenv" }
bun_event_loop = { path = "src/event_loop" }
bun_exe_format = { path = "src/exe_format" }
bun_highway = { path = "src/highway" }
bun_http_jsc = { path = "src/http_jsc" }
bun_http_types = { path = "src/http_types" }
bun_ini = { path = "src/ini" }
bun_install_jsc = { path = "src/install_jsc" }
bun_install_types = { path = "src/install_types" }
bun_js_parser = { path = "src/js_parser" }
bun_js_parser_jsc = { path = "src/js_parser_jsc" }
bun_js_printer = { path = "src/js_printer" }
bun_libarchive_sys = { path = "src/libarchive_sys" }
bun_libdeflate_sys = { path = "src/libdeflate_sys" }
bun_libuv_sys = { path = "src/libuv_sys" }
bun_ast = { path = "src/ast" }
bun_ast_jsc = { path = "src/ast_jsc" }
bun_lolhtml_sys = { path = "src/lolhtml_sys" }
bun_picohttp = { path = "src/picohttp" }
bun_s3_signing = { path = "src/s3_signing" }
bun_sql_jsc = { path = "src/sql_jsc" }
bun_zlib = { path = "src/zlib" }
bun_patch = { path = "src/patch" }
bun_platform = { path = "src/platform" }
bun_sha_hmac = { path = "src/sha_hmac" }
bun_sys_jsc = { path = "src/sys_jsc" }
bun_url_jsc = { path = "src/url_jsc" }
bun_zlib_sys = { path = "src/zlib_sys" }
bun_dispatch = { path = "src/dispatch" }
bun_brotli = { path = "src/brotli" }
bun_bundler_jsc = { path = "src/bundler_jsc" }
bun_perf = { path = "src/perf" }
bun_resolve_builtins = { path = "src/resolve_builtins" }
bun_sourcemap_jsc = { path = "src/sourcemap_jsc" }
bun_url = { path = "src/url" }
bun_windows_sys = { path = "src/windows_sys" }
bun_jsc = { path = "src/jsc" }
bun_jsc_macros = { path = "src/jsc_macros" }
bun_ptr = { path = "src/ptr" }
bun_boringssl = { path = "src/boringssl" }
bun_brotli_sys = { path = "src/brotli_sys" }
bun_alloc = { path = "src/bun_alloc" }
bun_mimalloc_sys = { path = "src/mimalloc_sys" }
bun_picohttp_sys = { path = "src/picohttp_sys" }
bun_semver_jsc = { path = "src/semver_jsc" }
bun_standalone_graph = { path = "src/standalone_graph" }
bun_uws = { path = "src/uws" }
bun_wyhash = { path = "src/wyhash" }
bun_hash = { path = "src/hash" }
bun_boringssl_sys = { path = "src/boringssl_sys" }
bun_core = { path = "src/bun_core" }
bun_core_macros = { path = "src/bun_core_macros" }
bun_output_tags = { path = "src/bun_output_tags" }
bun_patch_jsc = { path = "src/patch_jsc" }
bun_router = { path = "src/router" }
bun_shell_parser = { path = "src/shell_parser" }
bun_spawn = { path = "src/spawn" }
bun_spawn_sys = { path = "src/spawn_sys" }
bun_tcc_sys = { path = "src/tcc_sys" }
bun_uws_sys = { path = "src/uws_sys" }
bun_zstd = { path = "src/zstd" }
bun_options_types = { path = "src/options_types" }
bun_bunfig = { path = "src/bunfig" }
bun_output = { path = "src/output" }
bun_runtime = { path = "src/runtime", default-features = false }
bun_simdutf_sys = { path = "src/simdutf_sys" }
bun_which = { path = "src/which" }
bun_transpiler = { path = "src/transpiler" }
